# alllang

./: .gitignore  README.md  pyproject.toml
alllang/: __init__.py  cli.py  config.py  conv.py  main.py
tests/: __init__.py  _example.py
