[tool.poetry]
name = "alllang"
version = "0.1.0"
description = ""
authors = ["Dan Sazonov <p.294803@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"
deep-translator = "^1.11.4"
unidecode = "^1.3.7"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
